update menu list mobile responsive

--- a/css/style.css
+++ b/css/style.css
@@ -186,8 +186,8 @@ footer {
     margin-right: .5rem;
   }
 
-  .menu__list {
-    flex-direction: column;
+  .menu .menu__list {
+    display: block;
     text-align: center;
   }
 
